# iot

./: .gitignore  LICENSE
src/clock/: CMakeLists.txt
src/clock/include/: ht16k33.h  i2c.h  sevenSegment.h  util.h
src/clock/src/: h16k33.cpp  i2c.cpp  main.c  main.cpp  sevenSegment.cpp  util.cpp
src/rgb_keypad/: rgb_keypad.sln
src/rgb_keypad/native_tests/: delegate_tests.cpp  native_tests.vcxproj  native_tests.vcxproj.filters  stdafx.cpp  stdafx.h
src/rgb_keypad/psscripts/: GenerateGamma.ps1  psscripts.pssproj
src/rgb_keypad/rgb_keypad/: Adafruit_TLC59711.cpp  Adafruit_TLC59711.h  Common.h  Keypad.cpp  Keypad.h  ScramblePad.cpp  ScramblePad.h  TLC59711.cpp  TLC59711.h  color.cpp  color.h  delegate.h  rgb_keypad.ino  rgb_keypad.vcxproj  rgb_keypad.vcxproj.filters  vector.h
